// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders correctly with 0 samples 1`] = `
<div>
  
  <!--v-if-->
  <table
    class="table table-hover table-sm"
  >
    <thead>
      <tr
        align="center"
      >
        <th
          scope="col"
        >
          ID
        </th>
        <th
          scope="col"
        >
          Sample name
        </th>
        <th
          scope="col"
        >
          Formula
        </th>
        <th
          scope="col"
        >
          Date
        </th>
        <th
          scope="col"
        >
          Creators
        </th>
        <th
          scope="col"
        >
          # of blocks
        </th>
        <th
          scope="col"
        />
      </tr>
    </thead>
    <tbody>
      
      
    </tbody>
  </table>
  
</div>
`;

exports[`it renders correctly with some samples 1`] = `
<div>
  
  <!--v-if-->
  <table
    class="table table-hover table-sm"
  >
    <thead>
      <tr
        align="center"
      >
        <th
          scope="col"
        >
          ID
        </th>
        <th
          scope="col"
        >
          Sample name
        </th>
        <th
          scope="col"
        >
          Formula
        </th>
        <th
          scope="col"
        >
          Date
        </th>
        <th
          scope="col"
        >
          Creators
        </th>
        <th
          scope="col"
        >
          # of blocks
        </th>
        <th
          scope="col"
        />
      </tr>
    </thead>
    <tbody>
      
      <tr
        id="jdb1-1"
      >
        <td
          align="left"
        >
          jdb1-1
        </td>
        <td
          align="left"
        >
          This is a test sample
        </td>
        <td>
          <span>
            
            <span>
              In
              <sub>
                0.333
              </sub>
            </span>
            <span>
              W
              <!--v-if-->
            </span>
            <span>
              O
              <sub>
                3
              </sub>
            </span>
            
          </span>
        </td>
        <td
          align="center"
        >
          2020-02-17
        </td>
        <td
          align="center"
        >
          
          
        </td>
        <td
          align="right"
        >
          6
        </td>
        <td
          align="right"
        >
          <button
            aria-label="delete"
            class="close"
            type="button"
          >
            <span
              aria-hidden="true"
              style="color: grey;"
            >
              ×
            </span>
          </button>
        </td>
      </tr>
      <tr
        id="jdb11-3_e1_s2"
      >
        <td
          align="left"
        >
          jdb11-3_e1_s2
        </td>
        <td
          align="left"
        >
          in situ SQUID test
        </td>
        <td>
          <span>
            
            <span>
              Na
              <!--v-if-->
            </span>
            <span>
              Co
              <!--v-if-->
            </span>
            <span>
              O
              <sub>
                2
              </sub>
            </span>
            
          </span>
        </td>
        <td
          align="center"
        >
          2021-02-19
        </td>
        <td
          align="center"
        >
          
          
        </td>
        <td
          align="right"
        >
          1
        </td>
        <td
          align="right"
        >
          <button
            aria-label="delete"
            class="close"
            type="button"
          >
            <span
              aria-hidden="true"
              style="color: grey;"
            >
              ×
            </span>
          </button>
        </td>
      </tr>
      <tr
        id="jdb11-3_e1_s3"
      >
        <td
          align="left"
        >
          jdb11-3_e1_s3
        </td>
        <td
          align="left"
        >
          another in situ SQUID test
        </td>
        <td>
          <span>
            
            <span>
              
              <!--v-if-->
            </span>
            
          </span>
        </td>
        <td
          align="center"
        >
          2021-02-24
        </td>
        <td
          align="center"
        >
          
          
        </td>
        <td
          align="right"
        >
          1
        </td>
        <td
          align="right"
        >
          <button
            aria-label="delete"
            class="close"
            type="button"
          >
            <span
              aria-hidden="true"
              style="color: grey;"
            >
              ×
            </span>
          </button>
        </td>
      </tr>
      <tr
        id="empty_test"
      >
        <td
          align="left"
        >
          empty_test
        </td>
        <td
          align="left"
        >
           
        </td>
        <td>
          <span>
            
            <span>
              
              <!--v-if-->
            </span>
            
          </span>
        </td>
        <td
          align="center"
        >
          1954-01-01
        </td>
        <td
          align="center"
        >
          
          
        </td>
        <td
          align="right"
        >
          0
        </td>
        <td
          align="right"
        >
          <button
            aria-label="delete"
            class="close"
            type="button"
          >
            <span
              aria-hidden="true"
              style="color: grey;"
            >
              ×
            </span>
          </button>
        </td>
      </tr>
      
    </tbody>
  </table>
  
</div>
`;
